feat: container registries command (#412)
