# pkg/cmd/server/server.go
@@ -16,6 +16,7 @@ import (
 	"github.com/daytonaio/daytona/pkg/api"
 	"github.com/daytonaio/daytona/pkg/apikey"
 	apikeyCmd "github.com/daytonaio/daytona/pkg/cmd/server/apikey"
+	. "github.com/daytonaio/daytona/pkg/cmd/server/containerregistry"
 	"github.com/daytonaio/daytona/pkg/cmd/server/daemon"
 	. "github.com/daytonaio/daytona/pkg/cmd/server/provider"
 	. "github.com/daytonaio/daytona/pkg/cmd/server/target"
@@ -303,6 +304,7 @@ func init() {
 	ServerCmd.AddCommand(logsCmd)
 	ServerCmd.AddCommand(TargetCmd)
 	ServerCmd.AddCommand(ProviderCmd)
+	ServerCmd.AddCommand(ContainerRegistryCmd)
 	ServerCmd.AddCommand(stopCmd)
 	ServerCmd.AddCommand(restartCmd)
 	ServerCmd.AddCommand(apikeyCmd.ApiKeyCmd)
